Refactoring of fully functioning app now